open smiley face
